# nbclassic-gist-it

./: MANIFEST.in  README.md  pyproject.toml  setup.py
jupyter-config/: gist_it.json
static/: gist_it.js
