[build-system]
requires = ["setuptools>=64.0", "jupyter_core"]
build-backend = "setuptools.build_meta"

[project]
name="nbclassic-gist-it"
requires-python=">=3.10"
dynamic = [ "keywords", "description", "version", "dependencies", "optional-dependencies", "readme", "license", "authors", "classifiers", "entry-points", "scripts", "urls"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "settings.ini" }, { file = "setup.py" }]
